Fix z-index and background color of date block.

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,7 @@ SIDEBAR
 
 .fixed {
   position: fixed;
+  z-index: 3;
 }
 
 .absolute {
